--- a/OBeautifulCode.Reflection.Recipes.Test/OBeautifulCode.Reflection.Recipes.Test.csproj
+++ b/OBeautifulCode.Reflection.Recipes.Test/OBeautifulCode.Reflection.Recipes.Test.csproj
@@ -106,6 +106,7 @@
     <Compile Include=".recipes\OBeautifulCode.Assertion\WorkflowExtensions.cs" />
     <Compile Include=".recipes\OBeautifulCode.AutoFakeItEasy\AutoFakeItEasyBootstrapper.cs" />
     <Compile Include=".recipes\OBeautifulCode.CodeAnalysis\ObcSuppressBecause.cs" />
+    <Compile Include=".recipes\OBeautifulCode.Collection\EnumerableExtensions.cs" />
     <Compile Include=".recipes\OBeautifulCode.Equality\DateTimeEqualityComparer.cs" />
     <Compile Include=".recipes\OBeautifulCode.Equality\DictionaryEqualityComparer.cs" />
     <Compile Include=".recipes\OBeautifulCode.Equality\EnumerableEqualityComparer.cs" />
@@ -114,6 +115,7 @@
     <Compile Include=".recipes\OBeautifulCode.Equality\EqualityExtensions.cs" />
     <Compile Include=".recipes\OBeautifulCode.Equality\HashCodeHelper.cs" />
     <Compile Include=".recipes\OBeautifulCode.Equality\ReadOnlyDictionaryEqualityComparer.cs" />
+    <Compile Include=".recipes\OBeautifulCode.String\StringExtensions.cs" />
     <Compile Include=".recipes\OBeautifulCode.Type\ArrayKind.cs" />
     <Compile Include=".recipes\OBeautifulCode.Type\ToStringReadableOptions.cs" />
     <Compile Include=".recipes\OBeautifulCode.Type\ToStringXmlDocOptions.cs" />
@@ -122,19 +124,22 @@
     <Compile Include="AssemblyHelperTest.cs" />
     <Compile Include="AppDomainHelperTest.cs" />
     <Compile Include="Properties\ProjectInfo.cs" />
-    <Compile Include="ReflectionHelperTest.Method.cs" />
+    <Compile Include="ReflectionHelper\ReflectionHelperTest.Constructor.cs" />
+    <Compile Include="ReflectionHelper\ReflectionHelperTest.Attribute.cs" />
+    <Compile Include="ReflectionHelper\ReflectionHelperTest.Enum.cs" />
+    <Compile Include="ReflectionHelper\ReflectionHelperTest.Property.cs" />
+    <Compile Include="ReflectionHelper\ReflectionHelperTest.Method.cs" />
+    <Compile Include="TypesForTesting\PropertyTestTypes.cs" />
     <Compile Include="TypesForTesting\InterfaceTestTypes.cs" />
     <Compile Include="TypesForTesting\NullAndNotNullFields.cs" />
     <Compile Include="TypesForTesting\NullAndNotNullProperties.cs" />
     <Compile Include="TypesForTesting\Attributes.cs" />
     <Compile Include="TypesForTesting\AttributesOnClasses.cs" />
     <Compile Include="TypesForTesting\AttributesOnTypes.cs" />
-    <Compile Include="TypesForTesting\Child.cs" />
     <Compile Include="TypesForTesting\Construct.cs" />
     <Compile Include="TypesForTesting\AttributesOnEnumValues.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ReflectionHelperTest.cs" />
-    <Compile Include="TypesForTesting\Parent.cs" />
+    <None Include="ReflectionHelper\ReflectionHelperTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\OBeautifulCode.Reflection.Recipes\OBeautifulCode.Reflection.Recipes.csproj">
@@ -161,6 +166,7 @@
   <ItemGroup>
     <Content Include=".analyzers\dictionary.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
     <PropertyGroup>
