--- a/OBeautifulCode.Reflection.Recipes.Test/packages.config
+++ b/OBeautifulCode.Reflection.Recipes.Test/packages.config
@@ -14,7 +14,9 @@
   <package id="OBeautifulCode.Build.Conventions.ReSharper" version="1.1.134" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Build.Properties.ProjectInfo" version="1.1.132" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.CodeAnalysis.Recipes.SuppressBecause" version="1.0.8" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.Collection.Recipes.EnumerableExtensions" version="1.0.46" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Equality.Recipes.EqualityHelpers" version="1.0.22" targetFramework="net462" developmentDependency="true" />
+  <package id="OBeautifulCode.String.Recipes.StringExtensions" version="1.0.47" targetFramework="net462" developmentDependency="true" />
   <package id="OBeautifulCode.Type.Recipes.TypeExtensions" version="1.0.71" targetFramework="net462" developmentDependency="true" />
   <package id="StyleCop.Analyzers" version="1.1.118" targetFramework="net462" developmentDependency="true" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net462" />
