--- a/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
+++ b/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
@@ -67,6 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssemblyLoader\AssemblyLoader.cs" />
     <Compile Include="Properties\ProjectInfo.cs" />
+    <Compile Include="ReflectionHelper\OrderMembersBy.cs" />
     <Compile Include="ReflectionHelper\BindingFlagsFor.cs" />
     <Compile Include="ReflectionHelper\ReflectionHelper.Method.cs" />
     <Compile Include="ReflectionHelper\ReflectionHelper.MemberInfo.cs" />
