--- a/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
+++ b/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
@@ -67,7 +67,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssemblyLoader\AssemblyLoader.cs" />
     <Compile Include="Properties\ProjectInfo.cs" />
-    <Compile Include="ReflectionHelper\OrderMembersBy.cs" />
+    <Compile Include="ReflectionHelper\Enums\AccessModifier.cs" />
+    <Compile Include="ReflectionHelper\Enums\MemberMutability.cs" />
+    <Compile Include="ReflectionHelper\Enums\MemberAccessModifiers.cs" />
+    <Compile Include="ReflectionHelper\Enums\MemberKinds.cs" />
+    <Compile Include="ReflectionHelper\Enums\MemberAttributes.cs" />
+    <Compile Include="ReflectionHelper\Enums\MemberOwners.cs" />
+    <Compile Include="ReflectionHelper\Enums\OrderMembersBy.cs" />
+    <Compile Include="ReflectionHelper\Enums\MemberRelationships.cs" />
     <Compile Include="ReflectionHelper\BindingFlagsFor.cs" />
     <Compile Include="ReflectionHelper\ReflectionHelper.Method.cs" />
     <Compile Include="ReflectionHelper\ReflectionHelper.MemberInfo.cs" />
@@ -100,6 +107,7 @@
   <ItemGroup>
     <Content Include=".analyzers\dictionary.xml" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\packages\OBeautifulCode.Build.Analyzers.1.1.134\build\OBeautifulCode.Build.Analyzers.targets" Condition="Exists('..\packages\OBeautifulCode.Build.Analyzers.1.1.134\build\OBeautifulCode.Build.Analyzers.targets')" />
   <Target Name="EnsureNuGetPackageBuildImports" BeforeTargets="PrepareForBuild">
