--- a/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
+++ b/OBeautifulCode.Reflection.Recipes/OBeautifulCode.Reflection.Recipes.csproj
@@ -67,7 +67,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="AssemblyLoader\AssemblyLoader.cs" />
     <Compile Include="Properties\ProjectInfo.cs" />
-    <Compile Include="ReflectionHelper\Enums\IncludeConstructorsWith.cs" />
+    <Compile Include="ReflectionHelper\Enums\ConstructorsMatchedToPropertiesStrategy.cs" />
     <Compile Include="ReflectionHelper\Enums\AccessModifier.cs" />
     <Compile Include="ReflectionHelper\Enums\MemberMutability.cs" />
     <Compile Include="ReflectionHelper\Enums\MemberAccessModifiers.cs" />
